fix header on mobile ui

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,8 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #dfd0b8; /* cornflowerblue */
-  /* height: 7vh; */
-  height: 50%;
+  height: 6vh;
 }
 
 .appTitleContainer h1 {
@@ -26,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0.3rem 0;
+  height: 3rem;
 }
 
 @media (min-width: 1024px) {
