--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,8 +3,8 @@
   color: white;
   background-color: #f35529;
   cursor: pointer;
-  width: 6rem;
-  height: 3rem;
+  width: 5.5rem;
+  height: 2.5rem;
 }
 
 .cardsContainer {
